--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
           <nav class="header-list-nav">
             <ul>
               <li><a class="active" href="index.html">Home</a></li>
-              <li><a href="blog.html">Produtos</a></li>
-              <li><a href="sobre.html">Sobre</a></li>
-              <li><a href="contato.html">Contato</a></li>
+              <li><a href="#">Produtos</a></li>
+              <li><a href="src/cadastro.html">Cadastro</a></li>
+              <li><a href="#">Contato</a></li>
             </ul>
           </nav>
           <div class="header-list-icon">
