--- a/public/index.html
+++ b/public/index.html
@@ -50,10 +50,10 @@
         <div class="header-list-mob" id="teste">
           <nav class="header-list-nav-mob">
             <ul>
-              <li><a class="active" href="index.html">Home</a></li>
-              <li><a href="blog.html">Produtos</a></li>
-              <li><a href="sobre.html">Sobre</a></li>
-              <li><a href="contato.html">Contato</a></li>
+              <li><a class="active" href="./index.html">Home</a></li>
+              <li><a href="#">Produtos</a></li>
+              <li><a href="./src/cadastro.html">Cadastro</a></li>
+              <li><a href="#">Contato</a></li>
             </ul>
           </nav>
         </div>        
