fixing w3 validator comments

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EcoMarket Produto Orgânicos</title>
-    <link rel="stylesheet" href="./style/style.css" />
+    <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="./style/responsive.css">
     <script src="./script/script.js"></script>
     <script
@@ -19,7 +19,7 @@
     <header>
       <div id="header">
         <div class="header-logo">
-          <a href="indext.html"><img src="img/logo-2.png" alt="" /></a>
+          <a href="indext.html"><img src="img/logo-2.png" alt=""></a>
         </div>
         <div class="header-list">
           <nav class="header-list-nav">
@@ -75,33 +75,33 @@
 
       <section id="habilidades" class="secao-p1">
         <div class="h-box">
-          <img src="img/habilidades/f1.png" alt="compra online" />
+          <img src="img/habilidades/f1.png" alt="compra online">
           <h6>Compre Online</h6>
         </div>
         <div class="h-box">
-          <img src="img/habilidades/f2.png" alt="envico rápido" />
+          <img src="img/habilidades/f2.png" alt="envico rápido">
           <h6>Envio rápido</h6>
         </div>
         <div class="h-box">
-          <img src="img/habilidades/f3.png" alt="economize" />
+          <img src="img/habilidades/f3.png" alt="economize">
           <h6>Economize</h6>
         </div>
         <div class="h-box">
-          <img src="img/habilidades/f4.png" alt="promoções" />
+          <img src="img/habilidades/f4.png" alt="promoções">
           <h6>Promoções</h6>
         </div>
         <div class="h-box">
-          <img src="img/habilidades/f6.png" alt="suporte" />
+          <img src="img/habilidades/f6.png" alt="suporte">
           <h6>Suporte 24H</h6>
         </div>
       </section>
 
-      <section class="produto-sec" class="secao-p1">
+      <section class="produto-sec" class="secao-p2">
         <h1>Nossas Cestas</h1>
         <p>Todos colhidos com muito amor</p>
         <div class="pro-colecao">
           <div class="produto-card">
-            <img src="img/cesta1.png" alt="imagem produto" />
+            <img src="img/cesta1.png" alt="imagem produto">
             <span>Cesta</span>
             <h4>Cesta Júnior</h4>
             <div class="stars">
@@ -115,7 +115,7 @@
             <a href="#"><i class="fa-solid fa-cart-shopping buy-icon"></i></a>
           </div>
           <div class="produto-card">
-            <img src="img/cesta1.png" alt="imagem produto" />
+            <img src="img/cesta1.png" alt="imagem produto">
             <span>Cesta</span>
             <h4>Cesta Júnior</h4>
             <div class="stars">
@@ -129,7 +129,7 @@
             <a href="#"><i class="fa-solid fa-cart-shopping buy-icon"></i></a>
           </div>
           <div class="produto-card">
-            <img src="img/cesta1.png" alt="imagem produto" />
+            <img src="img/cesta1.png" alt="imagem produto">
             <span>Cesta</span>
             <h4>Cesta Júnior</h4>
             <div class="stars">
@@ -143,7 +143,7 @@
             <a href="#"><i class="fa-solid fa-cart-shopping buy-icon"></i></a>
           </div>
           <div class="produto-card">
-            <img src="img/cesta1.png" alt="imagem produto" />
+            <img src="img/cesta1.png" alt="imagem produto">
             <span>Cesta</span>
             <h4>Cesta Júnior</h4>
             <div class="stars">
@@ -159,12 +159,12 @@
         </div>
       </section>
 
-      <section class="produto-sec" class="secao-p1">
+      <section class="produto-sec" class="secao-p3">
         <h1>Também Temos Produtos</h1>
         <p>Todos colhidos com muito amor</p>
         <div class="pro-colecao">
           <div class="produto-card">
-            <img src="img/tomate.png" alt="imagem produto" />
+            <img src="img/tomate.png" alt="imagem produto">
             <span>Produto</span>
             <h4>Tomata Holandês</h4>
             <div class="stars">
@@ -178,7 +178,7 @@
             <a href="#"><i class="fa-solid fa-cart-shopping buy-icon"></i></a>
           </div>
           <div class="produto-card">
-            <img src="img/alface.png" alt="imagem produto" />
+            <img src="img/alface.png" alt="imagem produto">
             <span>Produto</span>
             <h4>Alface Americano</h4>
             <div class="stars">
@@ -192,7 +192,7 @@
             <a href="#"><i class="fa-solid fa-cart-shopping buy-icon"></i></a>
           </div>
           <div class="produto-card">
-            <img src="img/tomate.png" alt="imagem produto" />
+            <img src="img/tomate.png" alt="imagem produto">
             <span>Produto</span>
             <h4>Tomata Holandês</h4>
             <div class="stars">
@@ -206,7 +206,7 @@
             <a href="#"><i class="fa-solid fa-cart-shopping buy-icon"></i></a>
           </div>
           <div class="produto-card">
-            <img src="img/alface.png" alt="imagem produto" />
+            <img src="img/alface.png" alt="imagem produto">
             <span>Produto</span>
             <h4>Alface Americano</h4>
             <div class="stars">
@@ -222,7 +222,7 @@
         </div>
       </section>
 
-      <section id="banners" class="secao-p1">
+      <section id="banners" class="secao-p4">
 
         <div class="big-banners">
           <div class="big-banners-1">
