--- a/public/src/cadastro.html
+++ b/public/src/cadastro.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cadastro De Clientes</title>
-  <link rel="stylesheet" href="../style/style.css" />
+  <link rel="stylesheet" href="../style/style.css">
   <link rel="stylesheet" href="../style/responsive.css">
   <link rel="stylesheet" href="../style/styleCadastro.css">
   <script src="../script/script.js"></script>
@@ -16,7 +16,7 @@
   <header>
     <div id="header">
       <div class="header-logo">
-        <a href="indext.html"><img src="../img/logo-2.png" alt="" /></a>
+        <a href="indext.html"><img src="../img/logo-2.png" alt=""></a>
       </div>
       <div class="header-list">
         <nav class="header-list-nav">
@@ -64,7 +64,7 @@
 
     <div class="form-main">
       <div class="form-card">
-        <form action="" method="POST">
+        <form action="./cadastro.html" method="POST">
           <div class="form-title">
             <h2 class="">Cadastro de Clientes</h2>
             <p>
@@ -75,61 +75,61 @@
           <div class="form-input-flex">
             <div>
               <label for="nome" class="form-label">Nome</label>
-              <input type="text" name="nome" id="nome" class="form-input" />
+              <input type="text" name="nome" id="nome" class="form-input">
             </div>
 
             <div>
               <label for="sobreNome" class="form-label"> Sobrenome </label>
-              <input type="text" name="sobreNome" id="sobreNome" class="form-input" />
+              <input type="text" name="sobreNome" id="sobreNome" class="form-input">
             </div>
           </div>
 
           <div class="form-input-flex">
             <div>
               <label for="email" class="form-label"> Email </label>
-              <input type="email" name="email" id="email" class="form-input" />
+              <input type="email" name="email" id="email" class="form-input">
             </div>
             <div>
               <label for="phone" class="form-label"> Telefone </label>
-              <input type="text" name="phone" id="phone" oninput="formatPhoneNumber()" class="form-input" />
+              <input type="text" name="phone" id="phone" oninput="formatPhoneNumber()" class="form-input">
             </div>
           </div>
 
           <div class="form-input-flex">
             <div>
               <label for="cep" class="form-label"> CEP </label>
-              <input type="text" name="cep" id="cep" maxlength="8" class="form-input" />
+              <input type="text" name="cep" id="cep" maxlength="8" class="form-input">
             </div>
             <div>
               <label for="bairro" class="form-label"> Bairro </label>
-              <input type="text" name="bairro" id="bairro" class="form-input" />
+              <input type="text" name="bairro" id="bairro" class="form-input">
             </div>
           </div>
 
           <div class="form-input-g">
             <label for="logradouro" class="form-label">Endereço</label>
-            <input type="text" name="logradouro" id="logradouro" class="form-input" />
+            <input type="text" name="logradouro" id="logradouro" class="form-input">
           </div>
 
           <div class="form-input-flex">
             <div>
               <label for="localidade" class="form-label"> Cidade </label>
-              <input type="text" name="localidade" id="localidade" class="form-input" />
+              <input type="text" name="localidade" id="localidade" class="form-input">
             </div>
             <div>
               <label for="uf" class="form-label"> Estado </label>
-              <input type="text" name="uf" id="uf" class="form-input" />
+              <input type="text" name="uf" id="uf" class="form-input">
             </div>
           </div>
 
           <div class="form-input-flex">
             <div>
               <label for="numero" class="form-label"> Número </label>
-              <input type="text" name="numero" id="numero" class="form-input" />
+              <input type="text" name="numero" id="numero" class="form-input">
             </div>
             <div>
               <label for="comple" class="form-label"> Complemento </label>
-              <input type="text" name="comple" id="comple" class="form-input" />
+              <input type="text" name="comple" id="comple" class="form-input">
             </div>
           </div>
 
@@ -190,7 +190,7 @@
 
   <script>
 
-    //estrutura para buscar o cep utilizando fetch api
+   //estrutura para buscar o cep utilizando fetch api
 
     const options = {
       method: "GET",
