Atualizando cadastro produto

--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,8 @@
         <nav class="header-list-nav">
           <ul>
             <li><a class="active" href="index.html">Home</a></li>
-            <li><a href="#">Produtos</a></li>
-            <li><a href="src/cadastro.html">Cadastro</a></li>
+            <li><a href="src/cadastroProduto.html">Produtos</a></li>
+            <li><a href="src/cadastroPessoa.html">Cadastro</a></li>
             <li><a href="#">Contato</a></li>
           </ul>
         </nav>
@@ -42,7 +42,7 @@
           <ul>
             <li><a class="active" href="./index.html">Home</a></li>
             <li><a href="#">Produtos</a></li>
-            <li><a href="./src/cadastro.html">Cadastro</a></li>
+            <li><a href="./src/cadastroPessoa.html">Cadastro</a></li>
             <li><a href="#">Contato</a></li>
           </ul>
         </nav>
