--- a/public/src/cadastroPessoa.html
+++ b/public/src/cadastroPessoa.html
@@ -7,7 +7,7 @@
   <title>Cadastro De Clientes</title>
   <link rel="stylesheet" href="../style/style.css">
   <link rel="stylesheet" href="../style/responsive.css">
-  <link rel="stylesheet" href="../style/styleCadastro.css">
+  <link rel="stylesheet" href="../style/styleCadastroPessoa.css">
   <script src="../script/script.js"></script>
 </head>
 
@@ -22,8 +22,8 @@
         <nav class="header-list-nav">
           <ul>
             <li><a class="active" href="../index.html">Home</a></li>
-            <li><a href="#">Produtos</a></li>
-            <li><a href="#">Cadastro</a></li>
+            <li><a href="./cadastroProduto.html">Produtos</a></li>
+            <li><a href="./cadastroPessoa.html">Cadastro</a></li>
             <li><a href="#">Contato</a></li>
           </ul>
         </nav>
@@ -64,7 +64,7 @@
 
     <div class="form-main">
       <div class="form-card">
-        <form action="./cadastro.html" method="POST">
+        <form action="./cadastroPessoa.html" method="POST">
           <div class="form-title">
             <h2 class="">Cadastro de Clientes</h2>
             <p>
