--- a/public/src/cadastroProduto.html
+++ b/public/src/cadastroProduto.html
@@ -4,11 +4,165 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cadastro de Produto</title>
+    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../style/styleCadastroProduto.css">
+    <link rel="stylesheet" href="../style/responsive.css">
+
+
 </head>
 
 <body>
-    
+    <header>
+        <div id="header">
+            <div class="header-logo">
+                <a href="indext.html"><img src="../img/logo-2.png" alt=""></a>
+            </div>
+            <div class="header-list">
+                <nav class="header-list-nav">
+                    <ul>
+                        <li><a class="active" href="../index.html">Home</a></li>
+                        <li><a href="./cadastroProduto.html">Produtos</a></li>
+                        <li><a href="./cadastroPessoa.html">Cadastro</a></li>
+                        <li><a href="#">Contato</a></li>
+                    </ul>
+                </nav>
+                <div class="header-list-icon">
+                    <a href=""><i class="fa fa-bag-shopping"></i></a>
+                </div>
+            </div>
+
+            <div class="menu-mobile-icon">
+                <a href="" onclick="adjustLayoutOn()"><i class="fa-solid fa-bars"></i></a>
+            </div>
+
+        </div>
+
+        <div id="header-mob">
+
+            <!-- <div class="menu-mobile-icon-mob">
+              <a href="" onclick="adjustLayoutOff()"><i class="fa-solid fa-bars"></i></a>
+            </div> -->
+
+            <div class="header-list-mob" id="teste">
+                <nav class="header-list-nav-mob">
+                    <ul>
+                        <li><a class="active" href="../index.html">Home</a></li>
+                        <li><a href="#">Produtos</a></li>
+                        <li><a href="#">Cadastro</a></li>
+                        <li><a href="#">Contato</a></li>
+                    </ul>
+                </nav>
+            </div>
+
+        </div>
+    </header>
+
+    <Main>
+        <div class="form-main">
+            <div class="form-card">
+                <form action="./cadastroPessoa.html" method="POST">
+                    <div class="form-title">
+                        <h2 class="">Cadastro de Produto</h2>
+                        <p>
+                            Cadastre o produto para sua loja!
+                        </p>
+                    </div>
+
+                    <div class="form-input-flex">
+                        <div>
+                            <label for="nome" class="form-label">Nome</label>
+                            <input type="text" name="nome" id="nome" class="form-input">
+                        </div>
+
+                        <div>
+                            <label for="preco" class="form-label"> Preço </label>
+                            <input type="text" name="preco" id="preco" class="form-input">
+                        </div>
+                    </div>
+
+                    <div class="form-input-flex">
+                        <div>
+                            <label for="categoria" class="form-label"> Categoria </label>
+                            <input type="text" name="categoria" id="categoria" class="form-input">
+                        </div>
+
+                        <div>
+                            <label for="descricao" class="form-label"> Descrição </label>
+                            <input type="text" name="descricao" id="descricao" class="form-input">
+                        </div>
+                    </div>
+
+                    <div class="form-input-flex">
+                        <div>
+                            <label for="quantidade" class="form-label"> Quantidade em estoque </label>
+                            <input type="text" name="quantidade" id="quantidade" class="form-input">
+                        </div>
+
+                        <div>
+                            <label for="validade" class="form-label"> Data de Validade </label>
+                            <input type="text" name="validade" id="validade" class="form-input">
+                        </div>
+                    </div>
+
+                    <div>
+                        <label for="imagem" class="form-label">Imagem produto</label>
+                        <input type="file" name="imagem" id="imagem">
+                    </div>
+
+                    <input type="button" class="formbold-btn" onclick="enviar()" value="Enviar">
+
+                </form>
+            </div>
+        </div>
+    </Main>
+
+    <footer>
+        <div id="footer">
+            <div class="contato">
+                <h3>Contato</h3>
+                <address>
+                    <p><b>Endereço:</b> Fazenda Sant' Antônio, MG - BR</p>
+                    <p><b>Telefone:</b> +55 (19) 9 999001020</p>
+                    <p><b>Funcionamento</b> 8:00 - 20:00. Seg - Sex</p>
+                </address>
+                <h3>Redes Sociais</h3>
+                <br>
+                <div class="sociais">
+                    <a href="#"><i class="fa-brands fa-facebook-square"></i></a>
+                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="#"><i class="fa-brands fa-telegram"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                </div>
+            </div>
+            <div class="sobre">
+                <h3>Sobre</h3>
+                <br>
+                <a href="#">Sobre Nós</a>
+                <a href="#">Infomações de entrega</a>
+                <a href="#">Política de privacidade</a>
+                <a href="#">Termos e condições</a>
+                <a href="#">Nos contate</a>
+            </div>
+            <div class="conta ">
+                <h3>Conta</h3>
+                <br>
+                <a href="#">Entrar</a>
+                <a href="#">Compras</a>
+                <a href="#">Carrinho</a>
+                <a href="#">Rastrear Pedido</a>
+                <a href="#">Ajuda</a>
+            </div>
+            <div class="pagamento">
+                <h3>Pagamentos</h3>
+                <br>
+                <p>Site Seguro - Pagamentos Seguros</p>
+                <img src="../img/pay.png" alt="">
+            </div>
+
+        </div>
+    </footer>
 </body>
 
 </html>
