Adicionando novos estilos

--- a/public/src/cadastroPessoa.html
+++ b/public/src/cadastroPessoa.html
@@ -87,11 +87,11 @@
           <div class="form-input-flex">
             <div>
               <label for="email" class="form-label"> Email </label>
-              <input type="email" name="email" id="email" class="form-input">
+              <input type="email" name="email" id="email" class="form-input" required placeholder="seuemail@dominio.com">
             </div>
             <div>
               <label for="phone" class="form-label"> Telefone </label>
-              <input type="text" name="phone" id="phone" oninput="formatPhoneNumber()" class="form-input">
+              <input type="text" name="phone" id="phone" oninput="formatPhoneNumber()" class="form-input" required placeholder="(XX) XXXXX-XXXX" >
             </div>
           </div>
 
