--- a/public/src/cadastroProduto.html
+++ b/public/src/cadastroProduto.html
@@ -40,10 +40,6 @@
 
         <div id="header-mob">
 
-            <!-- <div class="menu-mobile-icon-mob">
-              <a href="" onclick="adjustLayoutOff()"><i class="fa-solid fa-bars"></i></a>
-            </div> -->
-
             <div class="header-list-mob" id="teste">
                 <nav class="header-list-nav-mob">
                     <ul>
@@ -77,14 +73,14 @@
 
                         <div>
                             <label for="preco" class="form-label"> Preço </label>
-                            <input type="text" name="preco" id="preco" class="form-input">
+                            <input type="text" name="preco" id="preco" class="form-input" required placeholder="R$ 0,00">
                         </div>
                     </div>
 
                     <div class="form-input-flex">
-                        <div>
+                         <div>
                             <label for="categoria" class="form-label"> Categoria </label>
-                            <input type="text" name="categoria" id="categoria" class="form-input">
+                            <input type="text" name="categoria" id="categoria" class="form-input" required placeholder="Frutas/Legumes/Verduras">
                         </div>
 
                         <div>
@@ -95,13 +91,13 @@
 
                     <div class="form-input-flex">
                         <div>
-                            <label for="quantidade" class="form-label"> Quantidade em estoque </label>
-                            <input type="text" name="quantidade" id="quantidade" class="form-input">
+                            <label for="quantidade" class="form-label"> Estoque </label>
+                            <input type="number" name="quantidade" id="quantidade" class="form-input">
                         </div>
 
                         <div>
                             <label for="validade" class="form-label"> Data de Validade </label>
-                            <input type="text" name="validade" id="validade" class="form-input">
+                            <input type="date" name="validade" id="validade" class="form-input">
                         </div>
                     </div>
 
