add autenticacao email e senha

--- a/ecomarketifsp-app/public/index.html
+++ b/ecomarketifsp-app/public/index.html
@@ -26,6 +26,11 @@
     -->
     <title>Ecomarket IFSP</title>
     <script src="https://kit.fontawesome.com/0e53af926d.js" crossorigin="anonymous"></script>
+
+    <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+    <script defer src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
